Bug 250989 - kdm config module does not default to correct shutdown/restart commands (related to bug 214963)
Summary: kdm config module does not default to correct shutdown/restart commands (rela...
Status: RESOLVED FIXED
Alias: None
Product: kdm
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: FreeBSD Ports FreeBSD
: NOR normal
Target Milestone: ---
Assignee: kdm bugs tracker
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-12 17:47 UTC by David Naylor
Modified: 2010-10-25 09:41 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Naylor 2010-09-12 17:47:24 UTC
Version:           unspecified (using KDE 4.4.5) 
OS:                FreeBSD

Although the config file defaults to the correct shutdown/restart commands they are not explicitly set and the kcontrol module defaults to the wrong commands.  

Reproducible: Always

Steps to Reproduce:
Using the default kdmrc file open the kcontrol "Login Manager" module.  Look at the "Shutdown" tab.  

Actual Results:  
For halt: "/sbin/halt"
For restart: "/sbin/reboot"

Expected Results:  
(Under FreeBSD)
For halt: "/sbin/shutdown -p now"
For restart: "/sbin/shutdown -r now"

- This is related to bug report #214963
- See kcontrol/kdm/kdm-shut.cpp:204 for the location where the default for the module is set.
- See kdm/config.def for the appropriate defaults.
Comment 1 Oswald Buddenhagen 2010-10-25 09:41:33 UTC
SVN commit 1189444 by ossi:

use correct default for halt & reboot commands

BUG: 250989
FIXED-IN: 4.6

 M  +3 -0      CMakeLists.txt  
 M  +6 -4      kdm-shut.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1189444