use correct default for halt & reboot commands

BUG: 250989
FIXED-IN: 4.6

svn path=/trunk/KDE/kdebase/workspace/; revision=1189444